Wed Dec  4 13:02:13 2013  Aman Gupta <ruby@tmm1.net>

	* vm_trace.c (rb_suppress_tracing): Fix initialization of stack
	  allocated rb_trace_arg_t structure. Without this patch, sometimes
	  INTERNAL_EVENT_GC would be skipped accidentally inside
	  rb_threadptr_exec_event_hooks_orig().

Wed Dec  4 12:57:24 2013  Aman Gupta <ruby@tmm1.net>

	* string.c (fstr_update_callback): Improve implementation in r43968
	  based on feedback from @nagachika. In the existing case, we can
	  return ST_STOP to prevent any hash modification. In the !existing
	  case, set both key and value to the fstr.

Wed Dec  4 12:47:54 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/delegate.rb (Delegator#method_missing): ignore the target if not
	  set, and delegate to global methods.  [ruby-core:58572] [Bug #9155]

	* lib/delegate.rb (Delegator#respond_to_missing): ditto.

	* lib/delegate.rb (SimpleDelegator#__getobj__): yield and return if
	  not delegated but a block is given, like as Hash#fetch.

	* lib/delegate.rb (DelegateClass#__getobj__): ditto.

Tue Dec  3 23:48:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in: check malloc_size() available on BSD.

	* gc.c: use malloc_size() with malloc/malloc.h on BSD.

Tue Dec  3 23:06:20 2013  Narihiro Nakamura  <authornari@gmail.com>

	* object.c (rb_obj_clone): don't copy FL_WB_PROTECTED of a
	  original object.

Tue Dec  3 22:32:18 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_recursive): make similar (recursive) constructs
	  return same hash value.  execute recursively, and rewind to the
	  topmost frame with an object which .eql? to the recursive
	  object, if recursion is detected.

	* hash.c (rb_hash): detect recursion for all `hash' methods.  each
	  `hash' methods no longer need to use rb_exec_recursive().

Tue Dec  3 21:53:15 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_eval.c (rb_catch_protect): new function similar to
	  rb_catch_obj(), but protect from all global jumps like as